--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "w7chwe-front",
+  "name": "victor-granda-final-project-front-202301-bcn",
   "version": "0.1.0",
   "private": true,
   "type": "module",
@@ -22,8 +22,10 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test --passWithNoTests",
-    "eject": "react-scripts eject"
+    "test:coverage": "react-scripts test --coverage --watchAll=false --passWithNoTests",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject",
+    "prepare": "husky install"
   },
   "eslintConfig": {
     "extends": [
@@ -44,7 +46,16 @@
     ]
   },
   "devDependencies": {
+    "jwt-decode": "^3.1.2",
     "lint-staged": "^13.1.2",
-    "prettier": "^2.8.4"
+    "prettier": "^2.8.4",
+    "react-router-dom": "^6.8.2"
+  },
+  "jest": {
+    "collectCoverageFrom": [
+      "src/**/*.ts",
+      "src/**/*.tsx",
+      "!src/index.tsx"
+    ]
   }
 }
