--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "private": true,
   "type": "module",
   "dependencies": {
+    "@chakra-ui/react": "^2.5.1",
+    "@emotion/react": "^11.10.6",
+    "@emotion/styled": "^11.10.6",
     "@reduxjs/toolkit": "^1.9.2",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
@@ -12,9 +15,11 @@
     "@types/node": "^17.0.45",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.10",
+    "framer-motion": "^10.2.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
+    "react-router-dom": "^6.8.2",
     "react-scripts": "5.0.1",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
@@ -22,7 +27,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test:coverage": "react-scripts test --coverage --watchAll=false --passWithNoTests",
+    "test:coverage": "react-scripts test --coverage --watchAll=false",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "prepare": "husky install"
@@ -48,8 +53,8 @@
   "devDependencies": {
     "jwt-decode": "^3.1.2",
     "lint-staged": "^13.1.2",
-    "prettier": "^2.8.4",
-    "react-router-dom": "^6.8.2"
+    "husky": "^8.0.0",
+    "prettier": "^2.8.4"
   },
   "jest": {
     "collectCoverageFrom": [
