--- a/package.json
+++ b/package.json
@@ -51,9 +51,10 @@
     ]
   },
   "devDependencies": {
+    "husky": "^8.0.0",
     "jwt-decode": "^3.1.2",
     "lint-staged": "^13.1.2",
-    "husky": "^8.0.0",
+    "msw": "^1.1.0",
     "prettier": "^2.8.4"
   },
   "jest": {
