--- a/package.json
+++ b/package.json
@@ -23,7 +23,11 @@
     "react-router-dom": "^6.8.2",
     "react-scripts": "5.0.1",
     "typescript": "^4.9.5",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "jwt-decode": "^3.1.2",
+    "@types/styled-components": "^5.1.26",
+    "styled-components": "^5.3.8",
+    "msw": "^1.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -52,19 +56,16 @@
     ]
   },
   "devDependencies": {
-    "@types/styled-components": "^5.1.26",
     "husky": "^8.0.0",
-    "jwt-decode": "^3.1.2",
     "lint-staged": "^13.1.2",
-    "msw": "^1.1.0",
-    "prettier": "^2.8.4",
-    "styled-components": "^5.3.8"
+    "prettier": "^2.8.4"
   },
   "jest": {
     "collectCoverageFrom": [
       "src/**/*.ts",
       "src/**/*.tsx",
-      "!src/index.tsx"
+      "!src/index.tsx",
+      "!src/setupTests.ts"
     ]
   }
 }
