--- a/package.json
+++ b/package.json
@@ -16,18 +16,19 @@
     "@types/node": "^17.0.45",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.10",
+    "@types/styled-components": "^5.1.26",
     "framer-motion": "^10.2.3",
+    "jwt-decode": "^3.1.2",
+    "msw": "^1.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.8.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.8.2",
     "react-scripts": "5.0.1",
-    "typescript": "^4.9.5",
-    "web-vitals": "^2.1.4",
-    "jwt-decode": "^3.1.2",
-    "@types/styled-components": "^5.1.26",
     "styled-components": "^5.3.8",
-    "msw": "^1.1.0"
+    "typescript": "^4.9.5",
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
