--- a/package.json
+++ b/package.json
@@ -68,7 +68,8 @@
       "src/**/*.tsx",
       "!src/index.tsx",
       "!src/setupTests.ts",
-      "!src/react-app-env.d.ts"
+      "!src/react-app-env.d.ts",
+      "!src/styles/GlobalStyles.tsx"
     ]
   }
 }
