--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "framer-motion": "^10.2.3",
     "jwt-decode": "^3.1.2",
     "msw": "^1.1.0",
+    "openai": "^3.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
